--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,18 +67,7 @@
 
     <!-- Footer -->
     <footer class="container">
-      <small
-        >Built by <b>Kyle Fennell</b> •
-        <a
-          href="https://github.com/picocss/examples/blob/master/basic-template/"
-          >LinkedIn</a
-        >
-        •
-        <a
-          href="https://github.com/picocss/examples/blob/master/basic-template/"
-          >Twitter</a
-        ></small
-      >
+      <small>Built by <b>Kyle Fennell</b> • <a href="https://github.com/picocss/examples/blob/master/basic-template/">LinkedIn</a> • <a href="https://github.com/picocss/examples/blob/master/basic-template/">Twitter</a></small>
     </footer>
     <!-- ./ Footer -->
   </body>
