add tests for xxe1

--- a/app/templates/translate-xxe-1.html
+++ b/app/templates/translate-xxe-1.html
@@ -5,6 +5,8 @@
     <form action="/translate-xxe-1" method="POST" enctype="multipart/form-data">
       <h2>Translate My Doc</h2>
 
+      <p>We will translate your text to Japanese!</p>
+
       <input type="file" name="file" />
       <input type="submit" value="Translate" />
     </form>
