--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,47 +67,12 @@
 
     <!-- Footer -->
     <footer class="container">
-<<<<<<< HEAD
-<<<<<<< HEAD
-      <small>Built by <b>Kyle Fennell</b> • <a href="https://github.com/picocss/examples/blob/master/basic-template/">LinkedIn</a> • <a href="https://github.com/picocss/examples/blob/master/basic-template/">Twitter</a></small>
+      <small>
+        Built by <b>Kyle Fennell</b> •
+        <a href="https://github.com/fennellkyle">GitHub</a> •
+        <a href="https://www.linkedin.com/in/fennellkyle">LinkedIn</a> •
+        <a href="https://twitter.com/FennellKyle">Twitter</a>
+      </small>
     </footer>
-    <!-- ./ Footer -->
-||||||| parent of 1ad2ad4 (add translate-xxe-1 exercise)
-      <small>Built by <b>Kyle Fennell</b> • <a href="https://github.com/picocss/examples/blob/master/basic-template/">LinkedIn</a> • <a href="https://github.com/picocss/examples/blob/master/basic-template/">Twitter</a></small>
-    </footer><!-- ./ Footer -->
-
-
-=======
-      <small
-        >Built by <b>Kyle Fennell</b> •
-        <a
-          href="https://github.com/picocss/examples/blob/master/basic-template/"
-          >LinkedIn</a
-        >
-        •
-        <a
-          href="https://github.com/picocss/examples/blob/master/basic-template/"
-          >Twitter</a
-        ></small
-      >
-||||||| parent of 465dc33 (fix bad auto-format)
-      <small
-        >Built by <b>Kyle Fennell</b> •
-        <a
-          href="https://github.com/picocss/examples/blob/master/basic-template/"
-          >LinkedIn</a
-        >
-        •
-        <a
-          href="https://github.com/picocss/examples/blob/master/basic-template/"
-          >Twitter</a
-        ></small
-      >
-=======
-      <small>Built by <b>Kyle Fennell</b> • <a href="https://github.com/picocss/examples/blob/master/basic-template/">LinkedIn</a> • <a href="https://github.com/picocss/examples/blob/master/basic-template/">Twitter</a></small>
->>>>>>> 465dc33 (fix bad auto-format)
-    </footer>
-    <!-- ./ Footer -->
->>>>>>> 1ad2ad4 (add translate-xxe-1 exercise)
   </body>
 </html>
